--- a/services/dr-beam-base.service
+++ b/services/dr-beam-base.service
@@ -27,11 +27,12 @@ Environment=PYTHONUNBUFFERED=1
 
 ExecStart=/bin/bash -ec '\
 python /home/ubuntu/ovro_data_recorder/dr_beam.py \
-         --address          {{ address }} \
-         --port             {{ port }} \
-	 --beam             {{ beam }} \
-         --record-directory {{ directory }} \
-	 --logfile          /home/ubuntu/log/dr-beam-{{ beam }}.%H.log'
+         --address                {{ address }} \
+         --port                   {{ port }} \
+         --beam                   {{ beam }} \
+         --record-directory       {{ directory }} \
+         --record-directory-quota {{ quota }}
+         --logfile                /home/ubuntu/log/dr-beam-{{ beam }}.%H.log'
 
 [Install]
 WantedBy=multi-user.target
