--- a/services/dr-vfast-base.service
+++ b/services/dr-vfast-base.service
@@ -31,6 +31,7 @@ source /home/ubuntu/.bashrc && \
 /home/ubuntu/anaconda3/envs/casa/bin/python3 {{ path }}/dr_visibilities.py \
          --address                {{ address }} \
          --port                   {{ port }} \
+         --cores                  {{ cores }} \
          --quick \
          --record-directory       {{ directory }} \
          --record-directory-quota {{ quota }} \
