Ignore the tengine service file.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ docs/source/*.help
 
 # Generated service files
 services/dr-beam-[0-9]*.service
+services/dr-tengine.service
 services/dr-vslow-[0-9]*.service
 services/dr-vfast-[0-9]*.service
 services/dr-manager-vslow.service
