--- a/services/dr-tengine-base.service
+++ b/services/dr-tengine-base.service
@@ -30,6 +30,8 @@ source {{ anaconda }}/bin/activate {{ anaconda }}/envs/{{ condaenv }} && \
 {{ anaconda }}/envs/{{ condaenv }}/bin/python3 {{ path }}/dr_dual_tengine.py \
          --address                {{ address }} \
          --port                   {{ port }} \
+         --cores                  11,12,13,14,15 \
+         --gpu                    1 \
          --record-directory       {{ directory }} \
          --record-directory-quota {{ quota }} \
          --logfile                /home/ubuntu/log/dr-tengine.%H.log'
