--- a/services/dr-manager-vslow-base.service
+++ b/services/dr-manager-vslow-base.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 # Run as the specified user
-User=ubuntu
+User=pipeline
 
 # Allow unlimited locked memory
 LimitMEMLOCK=infinity
@@ -20,7 +20,7 @@ StandardError=syslog
 SyslogIdentifier=dr-manager-vslow
 
 # Run before process
-ExecStartPre=/bin/bash -c '[ -d /home/ubuntu/log ] || mkdir -p /home/ubuntu/log'
+ExecStartPre=/bin/bash -c '[ -d /fast/log ] || mkdir -p /fast/log'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
@@ -30,7 +30,7 @@ source {{ anaconda }}/bin/activate {{ anaconda }}/envs/{{ condaenv }} && \
 {{ anaconda }}/envs/{{ condaenv }}/bin/python3 {{ path }}/dr_manager_visibilites.py \
          --begin-band {{ begin_band }} \
          --end-band   {{ end_band }} \
-	       --logfile    /home/ubuntu/log/dr-manager-vslow.%H.log'
+	       --logfile    /fast/log/dr-manager-vslow.%H.log'
 
 [Install]
 WantedBy=multi-user.target
