--- a/services/dr-beam-base.service
+++ b/services/dr-beam-base.service
@@ -20,7 +20,7 @@ StandardError=syslog
 SyslogIdentifier=dr-beam-{{ beam }}
 
 # Run before process
-ExecStartPre=/bin/bash -c '[ -d /fast/log ] || mkdir -p /fast/log'
+ExecStartPre=/bin/bash -c '[ -d /data{{ calim_host }}/log ] || mkdir -p /data{{ calim_host }}/log'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
@@ -34,7 +34,7 @@ source {{ anaconda }}/bin/activate {{ anaconda }}/envs/{{ condaenv }} && \
          --cores                  {{ cores }} \
          --record-directory       {{ directory }} \
          --record-directory-quota {{ quota }} \
-         --logfile                /fast/log/dr-beam-{{ beam }}.%H.log'
+         --logfile                /data{{ calim_host }}/log/dr-beam-{{ beam }}.%H.log'
 
 [Install]
 WantedBy=multi-user.target
