--- a/services/dr-vfast-base.service
+++ b/services/dr-vfast-base.service
@@ -20,7 +20,7 @@ StandardError=syslog
 SyslogIdentifier=dr-vfast-{{ band }}
 
 # Run before process
-ExecStartPre=/bin/bash -c '[ -d /fast/log ] || mkdir -p /fast/log'
+ExecStartPre=/bin/bash -c '[ -d /data{{ calim_host }}/log ] || mkdir -p /data{{ calim_host }}/log'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
@@ -35,7 +35,7 @@ source {{ anaconda }}/bin/activate {{ anaconda }}/envs/{{ condaenv }} && \
          --record-directory       {{ directory }} \
          --record-directory-quota {{ quota }} \
          --no-tar \
-         --logfile                /fast/log/dr-vfast-{{ band }}.%H.log'
+         --logfile                /data{{ calim_host }}/log/dr-vfast-{{ band }}.%H.log'
 
 [Install]
 WantedBy=multi-user.target
