--- a/services/dr-manager-vslow-base.service
+++ b/services/dr-manager-vslow-base.service
@@ -28,9 +28,8 @@ Environment=PYTHONUNBUFFERED=1
 ExecStart=/bin/bash -ec '\
 source {{ anaconda }}/bin/activate {{ condaenv }} && \
 python3 {{ path }}/dr_manager_visibilites.py \
-         --begin-band {{ begin_band }} \
-         --end-band   {{ end_band }} \
-	       --logfile    /fast/log/dr-manager-vslow.%H.log'
+         --band-id  {{ band_id }} \
+	       --logfile  /data01/log/dr-manager-vslow.%H.log'
 
 [Install]
 WantedBy=multi-user.target
