--- a/services/dr-manager-vfast-base.service
+++ b/services/dr-manager-vfast-base.service
@@ -27,7 +27,7 @@ Environment=PYTHONUNBUFFERED=1
 
 ExecStart=/bin/bash -ec '\
 source {{ anaconda }}/bin/activate {{ condaenv }} && \
-python3 {{ path }}/dr_manager_visibilites.py \
+python3 {{ path }}/dr_manager_visibilities.py \
          --band-id  {{ band_id }} \
          --logfile  /data01/log/dr-manager-vslow.%H.log'
 
