Have fast manage fast.

--- a/services/dr-manager-vfast-base.service
+++ b/services/dr-manager-vfast-base.service
@@ -29,6 +29,7 @@ ExecStart=/bin/bash -ec '\
 source {{ anaconda }}/bin/activate {{ condaenv }} && \
 python3 {{ path }}/dr_manager_visibilities.py \
          --band-id  {{ band_id }} \
+         --quick \
          --logfile  /data01/log/dr-manager-vslow.%H.log'
 
 [Install]
