Move to WantedBy=default.target so that we might can get them to start at boot.

--- a/services/dr-manager-vslow-base.service
+++ b/services/dr-manager-vslow-base.service
@@ -29,4 +29,4 @@ python3 {{ path }}/dr_manager_visibilities.py \
 	       --logfile  /data01/log/dr-manager-vslow.%H.log'
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
