--- a/services/dr-beam-base.service
+++ b/services/dr-beam-base.service
@@ -34,4 +34,4 @@ python3 {{ path }}/dr_beam.py \
          --logfile                /data{{ calim_host }}/log/dr-beam-{{ beam }}.%H.log'
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
