--- a/services/dr-manager-vfast-base.service
+++ b/services/dr-manager-vfast-base.service
@@ -30,4 +30,4 @@ python3 {{ path }}/dr_manager_visibilities.py \
          --logfile  /data01/log/dr-manager-vfast.%H.log'
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
