--- a/services/dr-vfast-base.service
+++ b/services/dr-vfast-base.service
@@ -35,4 +35,4 @@ python3 {{ path }}/dr_visibilities.py \
          --logfile                /data{{ calim_host }}/log/dr-vfast-{{ band }}.%H.log'
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
