--- a/.environment_doc.yml
+++ b/.environment_doc.yml
@@ -14,7 +14,6 @@ dependencies:
   - h5py
   - pip:
     - etcd3
-  - pip:
     - "git+https://github.com/dsa110/dsa110-pyutils"
-  - pip:
     - "git+https://github.com/ovro-lwa/mnc_python"
+    - "git+https://github.com/ovro-lwa/lwa-antpos"
