--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,4 +1,11 @@
+version: 2
+
+build:
+  apt_packages:
+    - gfortran
+    
 conda:
   file: .environment_doc.yml
+  
 python:
   setup_py_install: false
