--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,11 +5,11 @@ build:
     - gfortran
   jobs:
     pre_build:
-      git clone https://github.com/leda-telescope/bifrost
-      cd bifrost/python
-      make
-      pip install .
-      cd ../..
+      - git clone https://github.com/leda-telescope/bifrost
+      - cd bifrost/python
+      - make
+      - pip install .
+      - cd ../..
 
 conda:
   environment: .environment_doc.yml
