--- a/.environment_doc.yml
+++ b/.environment_doc.yml
@@ -13,11 +13,11 @@ dependencies:
   - pip
   - h5py
   - matplotlib
+  - ctypesgen
   - pip:
     - etcd3
     - "git+https://github.com/dsa110/dsa110-pyutils"
     - "git+https://github.com/ovro-lwa/mnc_python"
     - "git+https://github.com/ovro-lwa/lwa-antpos"
-    - ctypesgen==1.0.2
     - pint
     - "git+https://github.com/ledatelescope/bifrost@pip-bootstrap#subdirectory=python"
