--- a/services/dr-tengine-base.service
+++ b/services/dr-tengine-base.service
@@ -20,7 +20,7 @@ StandardError=syslog
 SyslogIdentifier=dr-tengine
 
 # Run before process
-ExecStartPre=/bin/bash -c '[ -d /home/ubuntu/log ] || mkdir -p /home/ubuntu/log'
+ExecStartPre=/bin/bash -c '[ -d {{ logdir }} ] || mkdir -p {{ logdir }}'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
@@ -34,7 +34,12 @@ source {{ anaconda }}/bin/activate {{ anaconda }}/envs/{{ condaenv }} && \
          --gpu                    1 \
          --record-directory       {{ directory }} \
          --record-directory-quota {{ quota }} \
-         --logfile                /home/ubuntu/log/dr-tengine.%H.log'
+         --logfile                {{ logdir }}/dr-tengine.%H.log'
 
 [Install]
 WantedBy=multi-user.target
+
+# Configuration Logging
+# Generated: {{ generated }}
+# Input File:  {{ input_file }}
+# Input File MD5: {{ input_file_md5 }}
