conda setuptools_scm.

--- a/.environment_doc.yml
+++ b/.environment_doc.yml
@@ -14,6 +14,7 @@ dependencies:
   - h5py
   - matplotlib
   - ctypesgen
+  - setuptools_scm
   - pip:
     - etcd3
     - "git+https://github.com/dsa110/dsa110-pyutils"
