--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,12 @@
 version: 2
 
 build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.6"
+  jobs:
+    pre_build:
+      - python setup.py build_ext --inplace
   apt_packages:
     - autoconf
     - exuberant-ctags
