--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,8 +2,6 @@ version: 2
 
 build:
   os: ubuntu-22.04
-  tools:
-    python: "3.6"
   jobs:
     pre_build:
       - python setup.py build_ext --inplace
@@ -19,3 +17,8 @@ build:
 
 conda:
   environment: .environment_doc.yml
+
+python:
+  install:
+    - method: setuptools
+    - path: .
