Move fast vis. recording to /fast/pipeline/fast.

--- a/services/service_config.json
+++ b/services/service_config.json
@@ -18,22 +18,22 @@
     "16": {"ip": "10.41.0.83", "port": 10002, "directory": "/data08/slow", "quota": 0}
   },
   "fast_vis": {
-    "1":  {"ip": "10.41.0.76", "port": 11001, "directory": "/data01/fast", "quota": "500GB"},
-    "2":  {"ip": "10.41.0.76", "port": 11002, "directory": "/data01/fast", "quota": 0},
-    "3":  {"ip": "10.41.0.77", "port": 11001, "directory": "/data02/fast", "quota": "500GB"},
-    "4":  {"ip": "10.41.0.77", "port": 11002, "directory": "/data02/fast", "quota": 0},
-    "5":  {"ip": "10.41.0.78", "port": 11001, "directory": "/data03/fast", "quota": "500GB"},
-    "6":  {"ip": "10.41.0.78", "port": 11002, "directory": "/data03/fast", "quota": 0},
-    "7":  {"ip": "10.41.0.79", "port": 11001, "directory": "/data04/fast", "quota": "500GB"},
-    "8":  {"ip": "10.41.0.79", "port": 11002, "directory": "/data04/fast", "quota": 0},
-    "9":  {"ip": "10.41.0.80", "port": 11001, "directory": "/data05/fast", "quota": "500GB"},
-    "10": {"ip": "10.41.0.80", "port": 11002, "directory": "/data05/fast", "quota": 0},
-    "11": {"ip": "10.41.0.81", "port": 11001, "directory": "/data06/fast", "quota": "500GB"},
-    "12": {"ip": "10.41.0.81", "port": 11002, "directory": "/data06/fast", "quota": 0},
-    "13": {"ip": "10.41.0.82", "port": 11001, "directory": "/data07/fast", "quota": "500GB"},
-    "14": {"ip": "10.41.0.82", "port": 11002, "directory": "/data07/fast", "quota": 0},
-    "15": {"ip": "10.41.0.83", "port": 11001, "directory": "/data08/fast", "quota": "500GB"},
-    "16": {"ip": "10.41.0.83", "port": 11002, "directory": "/data08/fast", "quota": 0}
+    "1":  {"ip": "10.41.0.76", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "2":  {"ip": "10.41.0.76", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "3":  {"ip": "10.41.0.77", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "4":  {"ip": "10.41.0.77", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "5":  {"ip": "10.41.0.78", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "6":  {"ip": "10.41.0.78", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "7":  {"ip": "10.41.0.79", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "8":  {"ip": "10.41.0.79", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "9":  {"ip": "10.41.0.80", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "10": {"ip": "10.41.0.80", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "11": {"ip": "10.41.0.81", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "12": {"ip": "10.41.0.81", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "13": {"ip": "10.41.0.82", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "14": {"ip": "10.41.0.82", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
+    "15": {"ip": "10.41.0.83", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "16": {"ip": "10.41.0.83", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0}
     },
   "power_beams": {
     "1":  {"ip": "10.41.0.76", "port": 20001, "directory": "/data01/beam01", "quota": "500GB"},
