--- a/services/dr-vfast-base.service
+++ b/services/dr-vfast-base.service
@@ -15,6 +15,7 @@ TimeoutStopSec=20
 ExecStartPre=/bin/bash -c '[ -d {{ logdir }} ] || mkdir -p {{ logdir }}'
 
 # Setup the environment
+Environment=GRPC_ENABLE_FORK_SUPPORT=true
 Environment=PYTHONUNBUFFERED=1
 
 ExecStart=/bin/bash -ec '\
