Add a new TimeStorageLogger class to implement a time-based quota.

--- a/services/service_config.json
+++ b/services/service_config.json
@@ -1,38 +1,38 @@
 {
   "slow_vis": {
-    "1":  {"ip": "10.41.0.76", "port": 10001, "directory": "/data01/slow", "quota": "6TB"},
+    "1":  {"ip": "10.41.0.76", "port": 10001, "directory": "/data01/slow", "quota": "1d00:00"},
     "2":  {"ip": "10.41.0.76", "port": 10002, "directory": "/data01/slow", "quota": 0},
-    "3":  {"ip": "10.41.0.77", "port": 10001, "directory": "/data02/slow", "quota": "6TB"},
+    "3":  {"ip": "10.41.0.77", "port": 10001, "directory": "/data02/slow", "quota": "1d00:00"},
     "4":  {"ip": "10.41.0.77", "port": 10002, "directory": "/data02/slow", "quota": 0},
-    "5":  {"ip": "10.41.0.78", "port": 10001, "directory": "/data03/slow", "quota": "6TB"},
+    "5":  {"ip": "10.41.0.78", "port": 10001, "directory": "/data03/slow", "quota": "1d00:00"},
     "6":  {"ip": "10.41.0.78", "port": 10002, "directory": "/data03/slow", "quota": 0},
-    "7":  {"ip": "10.41.0.79", "port": 10001, "directory": "/data04/slow", "quota": "6TB"},
+    "7":  {"ip": "10.41.0.79", "port": 10001, "directory": "/data04/slow", "quota": "1d00:00"},
     "8":  {"ip": "10.41.0.79", "port": 10002, "directory": "/data04/slow", "quota": 0},
-    "9":  {"ip": "10.41.0.80", "port": 10001, "directory": "/data05/slow", "quota": "6TB"},
+    "9":  {"ip": "10.41.0.80", "port": 10001, "directory": "/data05/slow", "quota": "1d00:00"},
     "10": {"ip": "10.41.0.80", "port": 10002, "directory": "/data05/slow", "quota": 0},
-    "11": {"ip": "10.41.0.81", "port": 10001, "directory": "/data06/slow", "quota": "6TB"},
+    "11": {"ip": "10.41.0.81", "port": 10001, "directory": "/data06/slow", "quota": "1d00:00"},
     "12": {"ip": "10.41.0.81", "port": 10002, "directory": "/data06/slow", "quota": 0},
-    "13": {"ip": "10.41.0.82", "port": 10001, "directory": "/data07/slow", "quota": "6TB"},
+    "13": {"ip": "10.41.0.82", "port": 10001, "directory": "/data07/slow", "quota": "1d00:00"},
     "14": {"ip": "10.41.0.82", "port": 10002, "directory": "/data07/slow", "quota": 0},
-    "15": {"ip": "10.41.0.83", "port": 10001, "directory": "/data08/slow", "quota": "6TB"},
+    "15": {"ip": "10.41.0.83", "port": 10001, "directory": "/data08/slow", "quota": "1d00:00"},
     "16": {"ip": "10.41.0.83", "port": 10002, "directory": "/data08/slow", "quota": 0}
   },
   "fast_vis": {
-    "1":  {"ip": "10.41.0.76", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "1":  {"ip": "10.41.0.76", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "2":  {"ip": "10.41.0.76", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "3":  {"ip": "10.41.0.77", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "3":  {"ip": "10.41.0.77", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "4":  {"ip": "10.41.0.77", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "5":  {"ip": "10.41.0.78", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "5":  {"ip": "10.41.0.78", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "6":  {"ip": "10.41.0.78", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "7":  {"ip": "10.41.0.79", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "7":  {"ip": "10.41.0.79", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "8":  {"ip": "10.41.0.79", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "9":  {"ip": "10.41.0.80", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "9":  {"ip": "10.41.0.80", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "10": {"ip": "10.41.0.80", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "11": {"ip": "10.41.0.81", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "11": {"ip": "10.41.0.81", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "12": {"ip": "10.41.0.81", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "13": {"ip": "10.41.0.82", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "13": {"ip": "10.41.0.82", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "14": {"ip": "10.41.0.82", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0},
-    "15": {"ip": "10.41.0.83", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "500GB"},
+    "15": {"ip": "10.41.0.83", "port": 11001, "directory": "/fast/pipeline/fast", "quota": "4:00"},
     "16": {"ip": "10.41.0.83", "port": 11002, "directory": "/fast/pipeline/fast", "quota": 0}
     },
   "power_beams": {
