--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -15,7 +15,7 @@ build:
     python: "mambaforge-22.9"
   
 conda:
-  environment: .rtd_environment.yaml
+  environment: docs/.rtd_environment.yaml
 
 sphinx:
   configuration: docs/source/conf.py
